--- a/sass/_profile.scss
+++ b/sass/_profile.scss
@@ -1,7 +1,7 @@
 .section-profile {
     background-color: $color-dark-blue;
     border-radius: 1.2rem;
-    grid-row: 1 / 2;
+    grid-row: 1 / -1;
     grid-column: 1 / 1;
   }
   
